--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.23.1",
     "node-sass": "^3.8.0",
     "react": "^15.3.0",
