--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack": "^1.13.1"
   },
   "devDependencies": {
-    "browser-sync": "^2.14.0"
+    "browser-sync": "^2.14.0",
+    "connect-history-api-fallback": "^1.3.0"
   }
 }
