--- a/package.json
+++ b/package.json
@@ -7,28 +7,30 @@
     "server": "browser-sync --config bs-config.js start"
   },
   "dependencies": {
-    "autoprefixer": "^6.6.1",
+    "autoprefixer": "^7.1.2",
     "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.22.0",
-    "css-loader": "^0.23.1",
-    "postcss": "^5.2.11",
-    "postcss-cssnext": "^2.9.0",
-    "postcss-import": "^9.1.0",
-    "postcss-loader": "^1.2.2",
-    "react": "^15.3.0",
+    "css-loader": "^0.28.4",
+    "history": "^4.6.3",
+    "postcss": "^6.0.8",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.6",
+    "react": "^15.6.1",
     "react-document-meta": "^2.0.3",
     "react-dom": "^15.3.0",
-    "react-google-tag-manager": "^1.1.2",
+    "react-google-tag-manager": "^2.1.0",
     "react-mixin": "^3.0.5",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.6.1",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.1"
+    "style-loader": "^0.18.2",
+    "webpack": "^3.4.1"
   },
   "devDependencies": {
     "browser-sync": "^2.14.0",
