--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.13.2",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.22.0",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.4",
     "history": "^4.6.3",
     "postcss": "^6.0.8",
