--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "react-router-dom": "^4.1.2",
     "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
+    "redux-actions": "^2.2.1",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1"
   },
   "devDependencies": {
     "browser-sync": "^2.14.0",
-    "connect-history-api-fallback": "^1.3.0"
+    "connect-history-api-fallback": "^1.3.0",
+    "eslint": "^4.4.0"
   }
 }
