--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "watch": "webpack --watch",
     "server": "browser-sync --config bs-config.js start",
     "test": "jest -c jest.json",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "flow": "flow check src"
   },
   "dependencies": {
     "autoprefixer": "^7.1.2",
@@ -17,6 +18,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.4",
+    "flow": "^0.2.3",
     "history": "^4.6.3",
     "postcss": "^6.0.8",
     "postcss-cssnext": "^3.0.2",
@@ -39,7 +41,10 @@
   "devDependencies": {
     "browser-sync": "^2.14.0",
     "connect-history-api-fallback": "^1.3.0",
+    "empty": "^0.10.1",
     "eslint": "^4.4.0",
+    "flow-bin": "^0.52.0",
+    "flow-typed": "^2.1.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^20.0.4"
   }
