--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "server": "browser-sync --config bs-config.js start",
     "test": "jest -c jest.json",
     "test:watch": "npm run test -- --watch",
+    "lint:css": "stylelint --fix 'src/css/**/*.css'",
     "flow": "flow check src"
   },
   "dependencies": {
@@ -46,6 +47,8 @@
     "flow-bin": "^0.52.0",
     "flow-typed": "^2.2.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^20.0.4"
+    "jest": "^20.0.4",
+    "stylelint": "^8.2.0",
+    "stylelint-config-recommended": "^1.0.0"
   }
 }
