--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:js": "eslint --fix 'src/js/**/*.js'",
     "lint:css": "stylelint --fix 'src/css/**/*.css'",
     "flow": "flow check src",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged && npm run flow"
   },
   "dependencies": {
     "autoprefixer": "^7.1.6",
