--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,13 +21,13 @@ jobs:
             - ./node_modules
       - run:
           name: lint
-          command: npm run lint
+          command: make lint
       - run:
           name: flow
-          command: npm run flow
+          command: make flow
       - run:
           name: test
-          command: npm test
+          command: make test
 #      - run:
 #          name: code-coverage
 #          command: './node_modules/.bin/nyc report --reporter=text-lcov'
