Install eslint-config-airbnb

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-    "extends": "eslint:recommended",
+    "extends": "airbnb",
     "env": {
         "browser": true,
         "node": true
@@ -15,5 +15,8 @@
     ],
     "rules": {
         "react/jsx-uses-vars": 1
+    },
+    "settings": {
+        "import/resolver": "webpack"
     }
 }
