--- a/package.json
+++ b/package.json
@@ -37,8 +37,12 @@
     "browser-sync": "^2.14.0",
     "connect-history-api-fallback": "^1.4.0",
     "empty": "^0.10.1",
-    "eslint": "^5.3.0",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint": "4",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-jsx-a11y": "6",
+    "eslint-plugin-react": "7",
     "flow-bin": "^0.78.0",
     "flow-typed": "^2.2.3",
     "husky": "^0.14.3",
