--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "empty": "^0.10.1",
     "eslint": "4",
     "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-import": "2",
     "eslint-plugin-jsx-a11y": "6",
@@ -49,6 +50,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.4.2",
     "lint-staged": "^7.2.0",
+    "prettier": "^1.14.0",
     "stylelint": "^9.4.0",
     "stylelint-config-recommended": "^2.1.0",
     "webpack-cli": "^3.1.0"
