--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "flow": "^0.2.3",
     "history": "^4.7.2",
+    "html-webpack-plugin": "^3.2.0",
     "postcss": "^7.0.2",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.1.0",
