--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "precommit": "make precommit"
   },
   "dependencies": {
-    "autoprefixer": "^9.1.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -18,7 +17,6 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
     "postcss": "^7.0.2",
-    "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.0.8",
     "react": "^16.4.2",
@@ -38,6 +36,7 @@
     "babel-eslint": "^8.0.2",
     "browser-sync": "^2.14.0",
     "connect-history-api-fallback": "^1.4.0",
+    "cssnano": "^4.0.5",
     "empty": "^0.10.1",
     "eslint": "4",
     "eslint-config-airbnb": "^17.0.0",
@@ -52,6 +51,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.4.2",
     "lint-staged": "^7.2.0",
+    "postcss-preset-env": "^5.3.0",
     "prettier": "^1.14.0",
     "stylelint": "^9.4.0",
     "stylelint-config-recommended": "^2.1.0",
