--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,11 @@
 {
-  "plugins": ["transform-decorators-legacy"],
+  "plugins": [
+    "transform-decorators-legacy",
+    "transform-object-rest-spread",
+    "transform-class-properties"
+  ],
   "presets": [
     "react",
-    "es2015",
-    "stage-2"
+    "env"
   ]
 }
