--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,7 +1,8 @@
 {
   "src/**/*.{js,jsx}": [
     "prettier --write",
-    "eslint --fix"
+    "eslint --fix",
+    "git add"
   ],
   "*.css": [
     "stylelint --fix"
