--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.2.1",
     "style-loader": "^0.21.0",
+    "ts-loader": "^4.4.2",
+    "typescript": "^3.0.1",
     "webpack": "^4.16.4"
   },
   "devDependencies": {
+    "@types/react": "^16.4.7",
     "babel-eslint": "^8.0.2",
     "browser-sync": "^2.14.0",
     "connect-history-api-fallback": "^1.4.0",
