--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
     "precommit": "make precommit"
   },
   "dependencies": {
+    "@types/jest": "^23.3.1",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.6",
+    "@types/react-router-dom": "^4.3.0",
+    "@types/react-router-redux": "^5.0.15",
+    "@types/redux": "^3.6.0",
+    "@types/redux-actions": "^2.3.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
