--- a/package.json
+++ b/package.json
@@ -66,6 +66,9 @@
     "prettier": "^1.14.0",
     "stylelint": "^9.4.0",
     "stylelint-config-recommended": "^2.1.0",
+    "tslint": "^5.11.0",
+    "tslint-config-airbnb": "^5.9.2",
+    "tslint-config-prettier": "^1.14.0",
     "webpack-cli": "^3.1.0"
   }
 }
