--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,7 +1,7 @@
 {
-  "src/**/*.{js,jsx}": [
+  "src/**/*.{ts,tsx}": [
     "prettier --write",
-    "eslint --fix",
+    "tslint --fix",
     "git add"
   ],
   "*.css": [
