--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/jest": "^23.3.1",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
+    "@types/react-helmet": "^5.0.7",
     "@types/react-router-dom": "^4.3.0",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -18,6 +19,7 @@
     "postcss-loader": "^2.0.8",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-helmet": "^5.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "style-loader": "^0.21.0",
