--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "webpack": "^4.16.4"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.13",
     "browser-sync": "^2.14.0",
     "connect-history-api-fallback": "^1.4.0",
     "cssnano": "^4.0.5",
     "empty": "^0.10.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.4.2",
@@ -40,6 +43,7 @@
     "prettier": "^1.14.0",
     "stylelint": "^9.4.0",
     "stylelint-config-recommended": "^2.1.0",
+    "ts-jest": "^23.1.2",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.9.2",
     "tslint-config-prettier": "^1.14.0",
