--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ insert_final_newline = true
 [bs-config.js]
 indent_size = 4
 
-[{*.js,*.css,*.scss}]
+[{*.js,*.jsx,*.ts,*.tsx,*.css,*.scss}]
 indent_size = 2
 
 [package.json]
