--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "empty": "^0.10.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "fork-ts-checker-webpack-plugin": "^0.4.5",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.4.2",
