Fix not to watch component files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,11 @@
     "outDir": "./dist/",
     "sourceMap": true,
     "strict": true,
-    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
     "target": "es5",
