--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "^16.0.6",
     "@types/react-helmet": "^5.0.7",
     "@types/react-router-dom": "^4.3.0",
+    "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "history": "^4.7.2",
