--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.9.2",
     "tslint-config-prettier": "^1.14.0",
+    "typings-for-css-modules-loader": "^1.7.0",
     "webpack-cli": "^3.1.0"
   }
 }
