--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
     "postcss": "^7.0.2",
-    "postcss-import": "^11.1.0",
+    "postcss-apply": "^0.11.0",
+    "postcss-import": "^12.0.0",
     "postcss-loader": "^2.0.8",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
